--- a/theme/package.json
+++ b/theme/package.json
@@ -17,21 +17,21 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-primer-react": "0.7.4",
     "eslint-plugin-react": "^7.26.1",
-    "gatsby": "^2.32.13",
+    "gatsby": "^3.0.0",
     "prettier": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "peerDependencies": {
-    "gatsby": "2.x",
-    "react": "^16.9.x",
-    "react-dom": "^16.9.x"
+    "gatsby": "3.x",
+    "react": ">= 16.9.x",
+    "react-dom": ">= 16.9.x"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@mdx-js/mdx": "^1.0.21",
-    "@mdx-js/react": "^1.0.21",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@mdx-js/mdx": "1",
+    "@mdx-js/react": "1",
     "@primer/component-metadata": "^0.4.0",
     "@primer/octicons-react": "^16.3.1",
     "@primer/react": "^35.2.2",
@@ -40,6 +40,7 @@
     "@testing-library/react": "^9.1.3",
     "axios": "^0.21.2",
     "babel-jest": "^24.9.0",
+    "babel-preset-gatsby": "^2.15.0",
     "copy-to-clipboard": "^3.2.0",
     "date-fns": "^2.28.0",
     "details-element-polyfill": "^2.4.0",
@@ -47,21 +48,23 @@
     "find-up": "^6.3.0",
     "framer-motion": "^1.4.2",
     "fuse.js": "^3.4.5",
-    "gatsby-plugin-catch-links": "^2.1.2",
-    "gatsby-plugin-manifest": "^2.2.1",
-    "gatsby-plugin-mdx": "^1.0.13",
-    "gatsby-plugin-page-creator": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.1.2",
-    "gatsby-plugin-styled-components": "^3.1.0",
-    "gatsby-source-filesystem": "^2.1.0",
-    "gatsby-transformer-yaml": "^2.2.0",
+    "gatsby-plugin-catch-links": "^3",
+    "gatsby-plugin-local-search": "^2.0.1",
+    "gatsby-plugin-manifest": "^3",
+    "gatsby-plugin-mdx": "^2",
+    "gatsby-plugin-page-creator": "^3",
+    "gatsby-plugin-react-helmet": "^4",
+    "gatsby-plugin-remove-trailing-slashes": "^3",
+    "gatsby-plugin-styled-components": "^4",
+    "gatsby-source-filesystem": "^3",
+    "gatsby-transformer-yaml": "^3",
     "get-pkg-repo": "^4.1.0",
     "github-slugger": "^1.2.1",
     "html-react-parser": "^1.4.0",
     "jest": "^24.9.0",
     "lodash.debounce": "4.0.8",
     "lodash.uniqby": "^4.7.0",
+    "path-browserify": "^1.0.1",
     "pkg-up": "^3.1.0",
     "pluralize": "^8.0.0",
     "preval.macro": "^3.0.0",
@@ -76,7 +79,7 @@
     "react-measure": "^2.3.0",
     "read-pkg-up": "^6.0.0",
     "sentence-case": "^2.1.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "^5.3.5",
     "styled-system": "^5.0.18",
     "worker-loader": "^3.0.2"
   }
